| Summary: | ASTERISK-20101: Can't dial from Motif to Google Chat user | ||
| Reporter: | Malcolm Davenport (mdavenport) | Labels: | |
| Date Opened: | 2012-07-09 11:26:08 | Date Closed: | 2012-07-09 11:31:20 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 11 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Asterisk SVN-trunk-r369769 | Attachments: | |
| Description: | I can't call from Motif to a Google Chat user. My Motif config looks like: {noformat} [gtalk](default) transport=google connection=gvoice-account {noformat} My XMPP config looks like: {noformat} [gvoice-account] type=client serverhost=talk.google.com username=ssssh@gmail.com secret=ssssh priority=1 port=5222 usetls=yes usesasl=yes status=available statusmessage="I am available" timeout=5 {noformat} My dial string looks like: exten => 880,1,Dial(Motif/gtalk/mybuddy@gmail.com) Asterisk responds: {noformat} == Extension Changed 0588[testing] new state InUse for Notify User 3011 -- Executing [880@testing:1] Dial("SIP/0588-00000002", "Motif/gtalk/mybuddy@gmail.com") in new stack [Jul 9 11:24:30] ERROR[3610][C-00000003]: chan_motif.c:1756 jingle_request: Unable to create Jingle session on endpoint 'gtalk' as no capable resource for target 'mybuddy@gmail.com' was found [Jul 9 11:24:30] WARNING[3610][C-00000003]: app_dial.c:2433 dial_exec_full: Unable to create channel of type 'Motif' (cause 42 - Switching equipment congestion) == Everyone is busy/congested at this time (1:0/0/1) {noformat} XMPP reports that Mybuddy is found: {noformat} malcolm*CLI> xmpp show buddies XMPP buddy lists Client: gvoice-account Buddy: mybuddy@gmail.com Resource: gmail.XXXXXXX node: http://mail.google.com/xmpp/client/caps version: 1.1 Google Talk capable: no Jingle capable: no {noformat} When I'm logged in (to the gmail web client) as mybuddy, I can see ssssh, and when I'm logged in as ssssh, I can see mybuddy. | ||
| Comments: | |||