Add additional namespaces for Google Talk which are used for the gmail client.

(closes issue ASTERISK-20101)
Reported by: Malcolm Davenport


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@369816 65c4cc65-6c06-0410-ace0-fbb531ad65f3